fixed the overflow-x

--- a/app/assets/stylesheets/player.css.scss
+++ b/app/assets/stylesheets/player.css.scss
@@ -78,6 +78,7 @@
       right: 0;
       bottom: 220px;
       overflow-y: scroll;
+      overflow-x: hidden;
     }
     
     &.hover {
